openshift/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-rest-http
    provider: snowdrop
    version: "1.5"
  name: spring-boot-rest-http
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot-rest-http
    provider: snowdrop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-boot-rest-http
    provider: snowdrop
    version: "1.5"
  name: spring-boot-rest-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-rest-http
      provider: snowdrop
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: spring-boot-rest-http
        provider: snowdrop
        version: "1.5"
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/snowdrop/spring-boot-example
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: spring-boot-rest-http
    provider: snowdrop
    version: "1.5"
  name: spring-boot-rest-http
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-boot-rest-http
