openshift/from-dir-s2i-build-deployment.yaml
apiVersion: v1
kind: Template
metadata:
  name: spring-boot-rest-http
  annotations:
    iconClass: icon-spring
    tags: spring-boot, rest, java, microservice
    openshift.io/display-name: Spring Boot - REST Http Endpoint
    openshift.io/provider-display-name: "Red Hat, Inc."
    openshift.io/documentation-url: "https://appdev.prod-preview.openshift.io/docs/spring-boot-runtime.html#mission-http-api-spring-boot-tomcat"
    description: >-
      The REST API Level 0 Mission provides a basic example of mapping business operations to a remote procedure call endpoint over HTTP using a REST framework.
parameters:
- name: SOURCE_REPOSITORY_DIR
  description: The location within the source repo of the application
  displayName: Source Directory
  value: .
  required: true
- name: ARTIFACT_COPY_ARGS
  description: Syntax to be used to copy uberjar files to the target directory
  displayName: Copy Args
  value: '*.jar'
  required: true
- name: GITHUB_WEBHOOK_SECRET
  description: A secret string used to configure the GitHub webhook.
  displayName: GitHub Webhook Secret
  required: true
  from: '[a-zA-Z0-9]{40}'
  generate: expression
- name: MAVEN_MIRROR_URL
  description: Maven Nexus Repository to be used during build phase
  displayName:
  required: false
- name: NAMESPACE
  description: User's namespace
  displayName: User's namespace
  value: demo
objects:
- apiVersion: v1
  kind: BuildConfig
  metadata:
    labels:
      build: spring-boot-rest-http
    name: spring-boot-rest-http
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: DockerImage
        name: docker-registry.default.svc:5000/${NAMESPACE}/spring-boot-rest-http:2.1.3
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      binary: {}
      type: Binary
    strategy:
      sourceStrategy:
        from:
          kind: DockerImage
          name: registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift
        incremental: true
      type: Source
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: spring-boot-rest-http
      provider: snowdrop
      version: "2.1.3"
      group: io.openshift.booster
    name: spring-boot-rest-http
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: spring-boot-rest-http
      provider: snowdrop
      group: io.openshift.booster
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: spring-boot-rest-http
      provider: snowdrop
      version: "2.1.3"
      group: io.openshift.booster
    name: spring-boot-rest-http
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: spring-boot-rest-http
        provider: snowdrop
        group: io.openshift.booster
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: spring-boot-rest-http
          provider: snowdrop
          version: "2.1.3"
          group: io.openshift.booster
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: spring-boot-rest-http:2.1.3
          imagePullPolicy: IfNotPresent
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            livenessProbe:
              httpGet:
                path: /actuator/health
                port: 8080
                scheme: HTTP
              initialDelaySeconds: 180
          securityContext:
            privileged: false
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: spring-boot-rest-http
      provider: snowdrop
      version: "2.1.3"
      group: io.openshift.booster
    name: spring-boot-rest-http
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: spring-boot-rest-http
